add controller, response flies. client wip

--- a/stock-tracker/src/main/resources/application.properties
+++ b/stock-tracker/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=stock-tracker
+
+alpga.vantage.base.url=https://www.alphavantage.co/query
+alpha.vantage.api.key=<the-api-key-here>
